--- a/finalproject/pom.xml
+++ b/finalproject/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>webdrivermanager</artifactId>
             <version>5.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
 
         <!-- Jsoup：解析 innerHTML -->
         <dependency>
